# Material-Kit

./: .gitignore  README.md  pyproject.toml
material_kit/: hooks.py  modules.txt
material_kit/config/: desktop.py  docs.py
material_kit/templates/includes/: about_us.html  author.html  footer.html  header.html  nav.html  sign_in.html
material_kit/templates/pages/: custom_web.html
material_kit/www/: contact_us.html
material_kit/www/attention-catchers/: modals.html  tooltips-popovers.html
material_kit/www/elements/: avatars.html  badges.html  buttons.html  typography.html
material_kit/www/input-areas/: forms.html
material_kit/www/navigation/: nav-tabs.html
material_kit/www/page-sections/: hero-sections.html
material_kit/www/sections/attention-catchers/: alerts.html  modals.html
material_kit/www/sections/elements/: avatars.html  badges.html  breadcrumbs.html  dropdowns.html  progress-bars.html  toggles.html
material_kit/www/sections/input-areas/: inputs.html
material_kit/www/sections/navigation/: navbars.html  pagination.html
material_kit/www/sections/page-sections/: features.html
